--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 					
                     <p>
                     
-                    • HTML, CSS, JS <br> 
+                    • HTML, CSS, JS, React.js, Node.js <br> 
                     • Adobe Lightroom <br>• Adobe Photoshop <br>• DaVinci resolve
                     </p>
 				</section>
@@ -119,6 +119,7 @@
 				<section>
 					<h2>WORK EXPERIENCE</h2>
                     <p>
+			• 2022 - today | FrontEnd Developer at Departamento General de Irrigación  <br>
                         • 2016 - today | Freelance Photographer <br>
                         • 2015 - 2016 | Freelance Frontend dev. (HTML5, CSS3)
                     </p>
