--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 					<h2>EDUCATION</h2>
 					
                     <p>
-                        • 2021 - Today | Chemical engineering<br>
+                        • 2021 - 2022 | Chemical engineering<br>
                         • 2010 - 2014 | Technology HighSchool PS-113 Tómas Alva Edison
 (Programming, Robotics, and computer knowledge) 
                     </p>
